--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_success:
 - git push deploy HEAD:master
 - python setup.py sdist
 - pip install twine
-- twine upload --config-file .pypirc-guettlibot dist/*
+- twine upload --config-file .pypirc-tbzbot dist/*
 before_install:
 - openssl aes-256-cbc -K $encrypted_f79a180b095b_key -iv $encrypted_f79a180b095b_iv
   -in secret-files.tar.enc -out secret-files.tar -d
