--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: python
 python:
 - '2.7'
+before_install:
+- openssl aes-256-cbc -K $encrypted_f60926cea37f_key -iv $encrypted_f60926cea37f_iv
+  -in secret-files.tar.enc -out secret-files.tar -d
+- tar xvf secret-files.tar
 install:
 - pip install .
 - pip install -r requirements.txt
@@ -18,7 +22,4 @@ after_success:
 - git push deploy HEAD:master
 - python setup.py sdist
 - pip install twine
-- openssl aes-256-cbc -K $encrypted_fc6e3729abd4_key -iv $encrypted_fc6e3729abd4_iv
-  -in secret-files.tar.enc -out secret-files.tar -d
-- tar xvf secret-files.tar
 - twine upload --config-file .pypirc-bot dist/*
